--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,3 +7,18 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 }
+
+@layer components {
+  .product-sticky {
+    top: 74px;
+    position: sticky;
+  }
+
+  .size-striked {
+    height: 1px;
+    width: 32px;
+    transform: rotateZ(-15deg);
+    position: absolute;
+    display: block;
+  }
+}
